fix footer style overflow

--- a/src/landingPage/FooterSection.module.scss
+++ b/src/landingPage/FooterSection.module.scss
@@ -8,6 +8,8 @@
   flex-direction: row;
   justify-content: space-between;
 
+  overflow: hidden;
+
   
   .leftColumn {
     min-height: 90vh;
